--- a/train.ipynb
+++ b/train.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7.1\n"
+      "1.7.1\n",
+      "importing Jupyter notebook from data_loader.ipynb\n"
      ]
     }
    ],
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +39,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,25 +171,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([10, 3, 129, 129])"
+       "tensor([[[[1.8673, 1.8673, 1.8673,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          ...,\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.5353, 1.5353, 1.5353]],\n",
+       "\n",
+       "         [[1.8673, 1.8673, 1.8673,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          ...,\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.5353, 1.5353, 1.5353]],\n",
+       "\n",
+       "         [[1.8673, 1.8673, 1.8673,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          ...,\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          [1.8673, 1.8673, 1.8673,  ..., 1.5353, 1.5353, 1.5353]]],\n",
+       "\n",
+       "\n",
+       "        [[[1.5353, 1.5353, 1.5353,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          ...,\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 2.1993, 2.1993, 2.1993]],\n",
+       "\n",
+       "         [[1.5353, 1.5353, 1.5353,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          ...,\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 2.1993, 2.1993, 2.1993]],\n",
+       "\n",
+       "         [[1.5353, 1.5353, 1.5353,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 1.5353, 1.5353, 1.5353],\n",
+       "          ...,\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [1.5353, 1.5353, 1.5353,  ..., 2.1993, 2.1993, 2.1993]]],\n",
+       "\n",
+       "\n",
+       "        [[[6.8474, 6.8474, 6.8474,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [6.8474, 6.8474, 6.8474,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [6.8474, 6.8474, 6.8474,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          ...,\n",
+       "          [3.1953, 3.1953, 3.1953,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [2.8633, 3.1953, 3.1953,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [2.8633, 3.1953, 3.1953,  ..., 1.8673, 1.8673, 1.8673]],\n",
+       "\n",
+       "         [[6.8474, 6.8474, 6.8474,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [6.8474, 6.8474, 6.8474,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [6.8474, 6.8474, 6.8474,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          ...,\n",
+       "          [3.1953, 3.1953, 3.1953,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [2.8633, 3.1953, 3.1953,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [2.8633, 3.1953, 3.1953,  ..., 1.8673, 1.8673, 1.8673]],\n",
+       "\n",
+       "         [[6.8474, 6.8474, 6.8474,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [6.8474, 6.8474, 6.8474,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [6.8474, 6.8474, 6.8474,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          ...,\n",
+       "          [3.1953, 3.1953, 3.1953,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [2.8633, 3.1953, 3.1953,  ..., 1.8673, 1.8673, 1.8673],\n",
+       "          [2.8633, 3.1953, 3.1953,  ..., 1.8673, 1.8673, 1.8673]]],\n",
+       "\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "\n",
+       "        [[[2.5313, 2.5313, 2.5313,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 2.1993, 2.1993, 2.5313],\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 2.5313, 2.5313, 2.5313],\n",
+       "          ...,\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 7.5115, 7.5115, 7.5115],\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 7.5115, 7.5115, 7.5115],\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 7.1795, 7.1795, 7.1795]],\n",
+       "\n",
+       "         [[2.5313, 2.5313, 2.5313,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 2.1993, 2.1993, 2.5313],\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 2.5313, 2.5313, 2.5313],\n",
+       "          ...,\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 7.5115, 7.5115, 7.5115],\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 7.5115, 7.5115, 7.5115],\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 7.1795, 7.1795, 7.1795]],\n",
+       "\n",
+       "         [[2.5313, 2.5313, 2.5313,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 2.1993, 2.1993, 2.5313],\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 2.5313, 2.5313, 2.5313],\n",
+       "          ...,\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 7.5115, 7.5115, 7.5115],\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 7.5115, 7.5115, 7.5115],\n",
+       "          [2.5313, 2.5313, 2.5313,  ..., 7.1795, 7.1795, 7.1795]]],\n",
+       "\n",
+       "\n",
+       "        [[[5.8514, 5.8514, 5.8514,  ..., 5.8514, 5.8514, 5.8514],\n",
+       "          [5.8514, 5.8514, 5.8514,  ..., 5.8514, 5.8514, 5.8514],\n",
+       "          [5.8514, 5.8514, 5.8514,  ..., 5.8514, 5.8514, 5.8514],\n",
+       "          ...,\n",
+       "          [7.1795, 7.1795, 7.1795,  ..., 7.5115, 7.5115, 7.5115],\n",
+       "          [7.1795, 7.1795, 7.1795,  ..., 7.5115, 7.5115, 7.5115],\n",
+       "          [7.1795, 7.1795, 7.1795,  ..., 7.5115, 7.5115, 7.5115]],\n",
+       "\n",
+       "         [[5.8514, 5.8514, 5.8514,  ..., 5.8514, 5.8514, 5.8514],\n",
+       "          [5.8514, 5.8514, 5.8514,  ..., 5.8514, 5.8514, 5.8514],\n",
+       "          [5.8514, 5.8514, 5.8514,  ..., 5.8514, 5.8514, 5.8514],\n",
+       "          ...,\n",
+       "          [7.1795, 7.1795, 7.1795,  ..., 7.5115, 7.5115, 7.5115],\n",
+       "          [7.1795, 7.1795, 7.1795,  ..., 7.5115, 7.5115, 7.5115],\n",
+       "          [7.1795, 7.1795, 7.1795,  ..., 7.5115, 7.5115, 7.5115]],\n",
+       "\n",
+       "         [[5.8514, 5.8514, 5.8514,  ..., 5.8514, 5.8514, 5.8514],\n",
+       "          [5.8514, 5.8514, 5.8514,  ..., 5.8514, 5.8514, 5.8514],\n",
+       "          [5.8514, 5.8514, 5.8514,  ..., 5.8514, 5.8514, 5.8514],\n",
+       "          ...,\n",
+       "          [7.1795, 7.1795, 7.1795,  ..., 7.5115, 7.5115, 7.5115],\n",
+       "          [7.1795, 7.1795, 7.1795,  ..., 7.5115, 7.5115, 7.5115],\n",
+       "          [7.1795, 7.1795, 7.1795,  ..., 7.5115, 7.5115, 7.5115]]],\n",
+       "\n",
+       "\n",
+       "        [[[5.5194, 5.5194, 5.5194,  ..., 3.1953, 3.1953, 3.1953],\n",
+       "          [5.5194, 5.5194, 5.5194,  ..., 3.1953, 3.1953, 3.1953],\n",
+       "          [5.5194, 5.5194, 5.5194,  ..., 3.1953, 3.1953, 3.1953],\n",
+       "          ...,\n",
+       "          [2.8633, 2.8633, 2.8633,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [2.8633, 2.8633, 2.8633,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [2.8633, 2.8633, 2.8633,  ..., 2.1993, 2.1993, 2.1993]],\n",
+       "\n",
+       "         [[5.5194, 5.5194, 5.5194,  ..., 3.1953, 3.1953, 3.1953],\n",
+       "          [5.5194, 5.5194, 5.5194,  ..., 3.1953, 3.1953, 3.1953],\n",
+       "          [5.5194, 5.5194, 5.5194,  ..., 3.1953, 3.1953, 3.1953],\n",
+       "          ...,\n",
+       "          [2.8633, 2.8633, 2.8633,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [2.8633, 2.8633, 2.8633,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [2.8633, 2.8633, 2.8633,  ..., 2.1993, 2.1993, 2.1993]],\n",
+       "\n",
+       "         [[5.5194, 5.5194, 5.5194,  ..., 3.1953, 3.1953, 3.1953],\n",
+       "          [5.5194, 5.5194, 5.5194,  ..., 3.1953, 3.1953, 3.1953],\n",
+       "          [5.5194, 5.5194, 5.5194,  ..., 3.1953, 3.1953, 3.1953],\n",
+       "          ...,\n",
+       "          [2.8633, 2.8633, 2.8633,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [2.8633, 2.8633, 2.8633,  ..., 2.1993, 2.1993, 2.1993],\n",
+       "          [2.8633, 2.8633, 2.8633,  ..., 2.1993, 2.1993, 2.1993]]]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "examples = enumerate(testloader)\n",
+    "examples = enumerate(trainloader)\n",
     "batch_idx, (example_data, example_targets) = next(examples)\n",
-    "example_data.shape"
+    "example_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
